Add non-done genetic, new title
new title - Hobaboba

--- a/pages/a_star/a_star.html
+++ b/pages/a_star/a_star.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Надо придумать, мне впадлу</title>
+	<title>Hobaboba</title>
 </head>
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="page-name"><a href="#">PorhHub</a></div>
+			<div class="page-name"><a href="#">Hobaboba</a></div>
 			<nav class="menu">
 				<ul class="menu__list">
 					<li class="menu__item"><a href="#">Главная страница</a></li>
