--- a/pages/formic/formic.html
+++ b/pages/formic/formic.html
@@ -21,7 +21,7 @@
 					<li class="menu__item menu__item-active"><a href="#">Муравьиный</a></li>
 					<li class="menu__item"><a href="#">Дерево</a></li>
 					<li class="menu__item"><a href="#">Нейронка</a></li>
-				</ul>
+				</ul> 
 			</nav>
 		</header>
 
@@ -69,7 +69,7 @@
 					<div class="sparing__inner">
 						<h3 class="sparing__name">Игра с машиной</h3>
 						<div class="sparing__tools">
-							<button id="clear-way" class="tools__button">Отчистить маршрут</button>
+							<button id="clear-way" class="tools__button">Очистить маршрут</button>
 
 							<button id="is-confirm" class="tools__button">Подтвердить маршрут</button>
 
