update style of button

--- a/pages/ai/public/page.html
+++ b/pages/ai/public/page.html
@@ -24,9 +24,9 @@
         <canvas id="canvas" width="50" height="50" style="background-color:#eee; border: 1px solid #ccc;"></canvas>
         <canvas id="new_canvas" width="28" height="28" style="background-color:#eee; border: 1px solid #ccc;"></canvas>
         <script type="module" src="./logic.js"></script>
-        <button id="button_define" class="button_define" type="button" onclick="define()">define</button>
-        <button id="button_clear" class="button_clear" type="button" onclick="clear()">clear</button>
-        <div id="parent" width="50"">
+        <button id="button_define" class="tools__button" type="button" onclick="define()">define</button>
+        <button id="button_clear" class="tools__button" type="button" onclick="clear()">clear</button>
+        <div id="parent" width="50">
             <div id="0">
                 0: <span id="zero">0</span>
             </div>
