--- a/pages/a_star/a_star.html
+++ b/pages/a_star/a_star.html
@@ -13,7 +13,7 @@
 			<nav class="menu">
 				<ul class="menu__list">
 					<li class="menu__item"><a href="#">Главная страница</a></li>
-					<li class="menu__item active"><a href="#">A* Search</a></li>
+					<li class="menu__item menu__item-active"><a href="#">A* Search</a></li>
 					<li class="menu__item"><a href="#">Кластеризация</a></li>
 					<li class="menu__item"><a href="#">Генетический</a></li>
 					<li class="menu__item"><a href="#">Муравьиный</a></li>
