background is added

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -22,7 +22,7 @@
 					</div>
 				</a>
 				<a href="" class="alghorithms__link">
-					<div class="algorithm-card" style="background-image: url('');">
+					<div class="algorithm-card" style="background-image: url('images/background-clastarization.jpg');">
 						<div class="algorithm-card__content">
 						  <h2 class="algorithm-card__title">Кластеризация</h2>
 						</div>
@@ -43,14 +43,14 @@
 					</div>
 				</a>
 				<a href="" class="alghorithms__link">
-					<div class="algorithm-card" style="background-image: url('');">
+					<div class="algorithm-card" style="background-image: url('images/background-tree.jpg');">
 						<div class="algorithm-card__content">
 						  <h2 class="algorithm-card__title">Дерево решений</h2>
 						</div>
 					</div>
 				</a>
 				<a href="" class="alghorithms__link">
-					<div class="algorithm-card" style="background-image: url('');">
+					<div class="algorithm-card" style="background-image: url('images/background-neuron.jpg');">
 						<div class="algorithm-card__content">
 						  <h2 class="algorithm-card__title">Нейронка</h2>
 						</div>
