--- a/pages/ai/public/page.html
+++ b/pages/ai/public/page.html
@@ -24,7 +24,6 @@
         <div style="display: grid; justify-content: center; align-items: center; place-items: center; margin-top: 10px;">
             <canvas id="canvas" width="50" height="50" style="background-color:#eee; border: 2px solid #1a80e5; margin-bottom: 10px;"></canvas>
             <canvas id="new_canvas" width="28" height="28" style="background-color:#eee; border: 2px solid #1a80e5; margin-bottom: 10px;"></canvas>
-            <script type="module" src="./logic.js"></script>
             <div style="display: flex;">
                 <button id="button_clear" class="tools__button" type="button" onclick="clear()">clear</button>
                 <button id="button_define" class="tools__button" type="button" onclick="define()">define</button>
@@ -63,4 +62,6 @@
             </div>
         </div>
     </body>
+    <script src="./weights.js"></script>
+    <script src="./logic.js"></script>
 </html>
