--- a/pages/ai/public/page.html
+++ b/pages/ai/public/page.html
@@ -11,12 +11,12 @@
 
 			<nav class="menu">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="#">Главная страница</a></li>
-					<li class="menu__item"><a href="#">A* Search</a></li>
-					<li class="menu__item"><a href="#">Кластеризация</a></li>
-					<li class="menu__item"><a href="#">Генетический</a></li>
-					<li class="menu__item"><a href="#">Муравьиный</a></li>
-					<li class="menu__item"><a href="#">Дерево</a></li>
+					<li class="menu__item"><a href="../../main/main.html">Главная страница</a></li>
+					<li class="menu__item"><a href="../../a_star/a_star.html">A* Search</a></li>
+					<li class="menu__item"><a href="../../clastorization/clastorization.html">Кластеризация</a></li>
+					<li class="menu__item"><a href="../../genetic/genetic.html">Генетический</a></li>
+					<li class="menu__item"><a href="../../formic/formic.html">Муравьиный</a></li>
+					<li class="menu__item"><a href="../../tree/page.html">Дерево</a></li>
 					<li class="menu__item menu__item-active"><a href="#">Нейронка</a></li>
 				</ul> 
 			</nav>
