--- a/pages/genetic/genetic.html
+++ b/pages/genetic/genetic.html
@@ -12,13 +12,13 @@
 			<div class="page-name"><a href="#">Hobaboba</a></div>
 			<nav class="menu">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="#">Главная страница</a></li>
-					<li class="menu__item active"><a href="#">A* Search</a></li>
-					<li class="menu__item"><a href="#">Кластеризация</a></li>
-					<li class="menu__item"><a href="#">Генетический</a></li>
-					<li class="menu__item"><a href="#">Муравьиный</a></li>
-					<li class="menu__item"><a href="#">Дерево</a></li>
-					<li class="menu__item"><a href="#">Нейронка</a></li>
+					<li class="menu__item"><a href="../main/main.html">Главная страница</a></li>
+					<li class="menu__item"><a href="../a_star/a_star.html">A* Search</a></li>
+					<li class="menu__item"><a href="../clastorization/clastorization.html">Кластеризация</a></li>
+					<li class="menu__item menu__item-active"><a href="#">Генетический</a></li>
+					<li class="menu__item"><a href="../formic/formic.html">Муравьиный</a></li>
+					<li class="menu__item"><a href="../tree/page.html">Дерево</a></li>
+					<li class="menu__item"><a href="../ai/public/page.html">Нейронка</a></li>
 				</ul>
 			</nav>
 		</header>
