--- a/pages/a_star/a_star.html
+++ b/pages/a_star/a_star.html
@@ -12,13 +12,13 @@
 			<div class="page-name"><a href="#">Hobaboba</a></div>
 			<nav class="menu">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="#">Главная страница</a></li>
-					<li class="menu__item menu__item-active"><a href="#">A* Search</a></li>
-					<li class="menu__item"><a href="#">Кластеризация</a></li>
-					<li class="menu__item"><a href="#">Генетический</a></li>
-					<li class="menu__item"><a href="#">Муравьиный</a></li>
-					<li class="menu__item"><a href="#">Дерево</a></li>
-					<li class="menu__item"><a href="#">Нейронка</a></li>
+					<li class="menu__item"><a href="../main/main.html">Главная страница</a></li>
+					<li class="menu__item menu__item-active"><a href="">A* Search</a></li>
+					<li class="menu__item"><a href="../clastorization/clastorization.html">Кластеризация</a></li>
+					<li class="menu__item"><a href="../genetic/genetic.html">Генетический</a></li>
+					<li class="menu__item"><a href="../formic/formic.html">Муравьиный</a></li>
+					<li class="menu__item"><a href="../tree/tree.html">Дерево</a></li>
+					<li class="menu__item"><a href="../ai/public/ai.html">Нейронка</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -44,7 +44,7 @@
 										<form name="editForm" action="#">
 											<div class="tools__edit-form">
 												<button id="tools__send-size" class="tools__button">Изменить размер</button>
-												<input name="sizeMaze" class="tools__input-size" type="text">
+												<input name="sizeMaze" class="tools__input-size" type="number">
 											</div>
 										</form>
 									</div>
@@ -71,8 +71,9 @@
 		</div>
 	</div>
 
-
-
+	<script src="./js/generator_maze.js"></script>
+	<script src="./js/a_star.js"></script>
 	<script src="./js/scripts.js"></script>
+	
 </body>
 </html>
