edited pages links

--- a/pages/ai/public/ai.html
+++ b/pages/ai/public/ai.html
@@ -16,7 +16,7 @@
 					<li class="menu__item"><a href="../../clastorization/clastorization.html">Кластеризация</a></li>
 					<li class="menu__item"><a href="../../genetic/genetic.html">Генетический</a></li>
 					<li class="menu__item"><a href="../../formic/formic.html">Муравьиный</a></li>
-					<li class="menu__item"><a href="../../tree/page.html">Дерево</a></li>
+					<li class="menu__item"><a href="../../tree/tree.html">Дерево</a></li>
 					<li class="menu__item menu__item-active"><a href="#">Нейронка</a></li>
 				</ul> 
 			</nav>
