--- a/pages/tree/tree.html
+++ b/pages/tree/tree.html
@@ -22,7 +22,7 @@
 					<li class="menu__item"><a href="../genetic/genetic.html">Генетический</a></li>
 					<li class="menu__item"><a href="../formic/formic.html">Муравьиный</a></li>
 					<li class="menu__item menu__item-active"><a href="#">Дерево</a></li>
-					<li class="menu__item"><a href="../ai/public/page.html">Нейронка</a></li>
+					<li class="menu__item"><a href="../ai/public/ai.html">Нейронка</a></li>
 				</ul>
 			</nav>
 		</header>
