--- a/pages/clastorization/clastorization.html
+++ b/pages/clastorization/clastorization.html
@@ -17,8 +17,8 @@
 					<li class="menu__item menu__item-active"><a href="#">Кластеризация</a></li>
 					<li class="menu__item"><a href="../genetic/genetic.html">Генетический</a></li>
 					<li class="menu__item"><a href="../formic/formic.html">Муравьиный</a></li>
-					<li class="menu__item"><a href="../tree/page.html">Дерево</a></li>
-					<li class="menu__item"><a href="../ai/public/page.html">Нейронка</a></li>
+					<li class="menu__item"><a href="../tree/tree.html">Дерево</a></li>
+					<li class="menu__item"><a href="../ai/public/ai.html">Нейронка</a></li>
 				</ul>
 			</nav>
 		</header>
