--- a/pages/formic/formic.html
+++ b/pages/formic/formic.html
@@ -16,7 +16,7 @@
 				<ul class="menu__list">
 					<li class="menu__item"><a href="../main/main.html">Главная страница</a></li>
 					<li class="menu__item"><a href="../a_star/a_star.html">A* Search</a></li>
-					<li class="menu__item"><a href="../clastorization/">Кластеризация</a></li>
+					<li class="menu__item"><a href="../clastorization/clastorization.html">Кластеризация</a></li>
 					<li class="menu__item"><a href="../genetic/genetic.html">Генетический</a></li>
 					<li class="menu__item menu__item-active"><a href="">Муравьиный</a></li>
 					<li class="menu__item"><a href="../tree/tree.html">Дерево</a></li>
