--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -42,14 +42,14 @@
 						</div>
 					</div>
 				</a>
-				<a href="../tree/page.html" class="alghorithms__link">
+				<a href="../tree/tree.html" class="alghorithms__link">
 					<div class="algorithm-card" style="background-image: url('images/background-tree.jpg');">
 						<div class="algorithm-card__content">
 						  <h2 class="algorithm-card__title">Дерево решений</h2>
 						</div>
 					</div>
 				</a>
-				<a href="../ai/public/page.html" class="alghorithms__link">
+				<a href="../ai/public/ai.html" class="alghorithms__link">
 					<div class="algorithm-card" style="background-image: url('images/background-neuron.jpg');">
 						<div class="algorithm-card__content">
 						  <h2 class="algorithm-card__title">Нейронка</h2>
