add pop up for ai answer

--- a/pages/ai/public/ai.html
+++ b/pages/ai/public/ai.html
@@ -61,6 +61,11 @@
                 </div>
             </div>
         </div>
+        <div class="popup__bg"> 
+            <form class="popup">
+                <h1 id="res" style="font-size: 40px;"></h1>
+            </form>
+        </div>
     </body>
     <script src="./weights.js"></script>
     <script src="./logic.js"></script>
